@@ -142,6 +142,7 @@ fi
 echo "Check combined page map"
 ./checkattr "$dumpfile.1" "$dumpfile.2" "$dumpfile.3" <<EOF
 file.pagemap = bitmap: 0x1e
+memory.pagemap = bitmap: 0x1f
 EOF
 rc=$?
 if [ $rc -ne 0 ]; then
@@ -152,6 +153,7 @@ fi
 echo "Check combined page map with files out of order"
 ./checkattr "$dumpfile.2" "$dumpfile.3" "$dumpfile.1" <<EOF
 file.pagemap = bitmap: 0x1e
+memory.pagemap = bitmap: 0x1f
 EOF
 rc=$?
 if [ $rc -ne 0 ]; then
@@ -162,6 +164,7 @@ fi
 echo "Check combined page map with one file missing"
 ./checkattr "$dumpfile.3" "$dumpfile.1" <<EOF
 file.pagemap = bitmap: 0x1a
+memory.pagemap = bitmap: 0x1f
 EOF
 rc=$?
 if [ $rc -ne 0 ]; then
